// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddEmergencyTasks should render the component 1`] = `
<div>
  <div
    class="side-bar-nav"
  >
    <div
      class="side-bar-header"
    >
      <div>
        Add Nursing Task
      </div>
      <div
        class="close-icon"
      >
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-_r_11_"
              class="cds--btn cds--btn--ghost cds--btn--icon-only"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-_r_11_"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="side-bar-children"
    >
      <div
        class="emergency-task-slider"
      >
        <div
          class="cds--tabs"
        >
          <button
            aria-hidden="true"
            aria-label="Scroll left"
            class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--previous cds--tab--overflow-nav-button--hidden"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 8 10 3 10.7 3.7 6.4 8 10.7 12.3 10 13z"
              />
            </svg>
          </button>
          <div
            aria-label="Nursing task type"
            class="cds--tab--list"
            role="tablist"
          >
            <button
              aria-controls="ccs-_r_14_-tabpanel-0"
              aria-selected="true"
              class="cds--tabs__nav-item cds--tabs__nav-link cds--tabs__nav-item--selected"
              id="ccs-_r_14_-tab-0"
              role="tab"
              tabindex="0"
              type="button"
            >
              <div
                class="cds--tabs__nav-item-label-wrapper"
              >
                <span
                  class="cds--tabs__nav-item-label"
                  dir="auto"
                >
                  Medication
                </span>
              </div>
            </button>
            <div
              class="cds--tabs__nav-item--close--hidden"
            >
              <button
                aria-hidden="true"
                class="cds--visually-hidden cds--tabs__nav-item--close-icon--selected"
                tabindex="-1"
                title="Remove  tab"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Press delete to remove  tab"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
            <button
              aria-controls="ccs-_r_14_-tabpanel-1"
              aria-selected="false"
              class="cds--tabs__nav-item cds--tabs__nav-link"
              id="ccs-_r_14_-tab-1"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <div
                class="cds--tabs__nav-item-label-wrapper"
              >
                <span
                  class="cds--tabs__nav-item-label"
                  dir="auto"
                >
                  Non - Medication
                </span>
              </div>
            </button>
            <div
              class="cds--tabs__nav-item--close--hidden"
            >
              <button
                aria-hidden="true"
                class="cds--visually-hidden"
                tabindex="-1"
                title="Remove  tab"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Press delete to remove  tab"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <button
            aria-hidden="true"
            aria-label="Scroll right"
            class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--next cds--tab--overflow-nav-button--hidden"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 8 6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
              />
            </svg>
          </button>
        </div>
        <div
          aria-labelledby="ccs-_r_14_-tab-0"
          class="cds--tab-content"
          id="ccs-_r_14_-tabpanel-0"
          role="tabpanel"
        >
          <div
            class="emergency-task-slider-content"
          >
            <div>
              <div
                class="cds--list-box__wrapper"
              >
                <label
                  class="cds--label"
                  dir="auto"
                  for="SearchDrug"
                  id="downshift-_r_17_-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Drug Name (Emergency / Ad hoc) 
                    </span>
                    <span
                      class="required"
                    >
                      *
                    </span>
                  </div>
                </label>
                <div
                  class="cds--combo-box cds--list-box cds--list-box--xl cds--layout--size-xl"
                >
                  <div
                    class="cds--list-box__field"
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-controls="downshift-_r_17_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-_r_17_-label"
                      autocomplete="off"
                      class="cds--text-input cds--text-input--empty"
                      id="SearchDrug"
                      placeholder="Type to Search Drug"
                      role="combobox"
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                    <button
                      aria-controls="downshift-_r_17_-menu"
                      aria-expanded="false"
                      aria-label="Open"
                      class="cds--list-box__menu-icon"
                      id="downshift-_r_17_-toggle-button"
                      tabindex="-1"
                      title="Open"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                      </svg>
                    </button>
                  </div>
                  <ul
                    aria-labelledby="downshift-_r_17_-label"
                    class="cds--list-box__menu"
                    id="downshift-_r_17_-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <div
              class="inline-field"
            >
              <div
                class="dosage-section-container"
              >
                <div
                  class="NW023la29jMKwMarLfBe"
                >
                  <div
                    class="cds--form-item"
                  >
                    <div
                      class="cds--number cds--number--helpertext cds--number--md"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="Dropdown"
                      >
                        <div
                          class="titleText"
                        >
                          <span>
                            Dose 
                          </span>
                          <span
                            class="required"
                          >
                            *
                          </span>
                        </div>
                      </label>
                      <div
                        class="cds--number__input-wrapper"
                      >
                        <input
                          aria-invalid="false"
                          id="Dropdown"
                          inputmode="decimal"
                          min="0"
                          pattern="[0-9]*"
                          step="1"
                          type="number"
                          value="0"
                        />
                        <div
                          class="cds--number__controls"
                        >
                          <button
                            aria-label="Decrement number"
                            class="cds--number__control-btn down-icon"
                            tabindex="-1"
                            title="Decrement number"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="down-icon"
                              fill="currentColor"
                              focusable="false"
                              height="16"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8 15H24V17H8z"
                              />
                            </svg>
                          </button>
                          <div
                            class="cds--number__rule-divider"
                          />
                          <button
                            aria-label="Increment number"
                            class="cds--number__control-btn up-icon"
                            tabindex="-1"
                            title="Increment number"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="up-icon"
                              fill="currentColor"
                              focusable="false"
                              height="16"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M17 15 17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                              />
                            </svg>
                          </button>
                          <div
                            class="cds--number__rule-divider"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  data-testid="select"
                >
                  <div
                    class="cds--list-box__wrapper"
                  >
                    <label
                      class="cds--label"
                      dir="auto"
                      for="Dosage Dropdown"
                      id="downshift-_r_1a_-label"
                    >
                      <div
                        class="titleText"
                      >
                        <span>
                           
                        </span>
                      </div>
                    </label>
                    <div
                      class="cds--combo-box cds--list-box"
                    >
                      <div
                        class="cds--list-box__field"
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-controls="downshift-_r_1a_-menu"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="downshift-_r_1a_-label"
                          autocomplete="off"
                          class="cds--text-input cds--text-input--empty"
                          id="Dosage Dropdown"
                          placeholder="Select Unit"
                          role="combobox"
                          style="width: 170px;"
                          tabindex="0"
                          title=""
                          type="text"
                        />
                        <button
                          aria-controls="downshift-_r_1a_-menu"
                          aria-expanded="false"
                          aria-label="Open"
                          class="cds--list-box__menu-icon"
                          id="downshift-_r_1a_-toggle-button"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </button>
                      </div>
                      <ul
                        aria-labelledby="downshift-_r_1a_-label"
                        class="cds--list-box__menu"
                        id="downshift-_r_1a_-menu"
                        role="listbox"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-testid="select"
              >
                <div
                  class="cds--list-box__wrapper"
                >
                  <label
                    class="cds--label"
                    dir="auto"
                    for="Route-Dropdown"
                    id="downshift-_r_1d_-label"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Route 
                      </span>
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </div>
                  </label>
                  <div
                    class="cds--combo-box cds--list-box"
                  >
                    <div
                      class="cds--list-box__field"
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-controls="downshift-_r_1d_-menu"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-_r_1d_-label"
                        autocomplete="off"
                        class="cds--text-input cds--text-input--empty"
                        id="Route-Dropdown"
                        placeholder="Select Route"
                        role="combobox"
                        style="width: 100%;"
                        tabindex="0"
                        title=""
                        type="text"
                      />
                      <button
                        aria-controls="downshift-_r_1d_-menu"
                        aria-expanded="false"
                        aria-label="Open"
                        class="cds--list-box__menu-icon"
                        id="downshift-_r_1d_-toggle-button"
                        tabindex="-1"
                        title="Open"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                        </svg>
                      </button>
                    </div>
                    <ul
                      aria-labelledby="downshift-_r_1d_-label"
                      class="cds--list-box__menu"
                      id="downshift-_r_1d_-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="administration-info"
              style="display: flex; gap: 10px;"
            >
              <div
                class="date-picker-carbon"
                data-testid="datePicker"
              >
                <div
                  class="cds--form-item"
                >
                  <div
                    class="cds--date-picker cds--date-picker--single"
                  >
                    <div
                      class="cds--date-picker-container"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="Administration-Date"
                      >
                        <div
                          class="titleText"
                        >
                          <span>
                            Administration Date 
                          </span>
                          <span
                            class="required"
                          >
                            *
                          </span>
                        </div>
                      </label>
                      <div
                        class="cds--date-picker-input__wrapper"
                      >
                        <span>
                          <input
                            autocomplete="off"
                            class="cds--date-picker__input cds--date-picker__input--md flatpickr-input"
                            id="Administration-Date"
                            pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                            placeholder="DD MMM YYYY"
                            required=""
                            style="width: 250px;"
                            type="text"
                          />
                          <svg
                            aria-hidden="true"
                            class="cds--date-picker__icon"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cds--form-item"
              >
                <label
                  class="cds--label"
                  for="time-selector"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Administration Time (24 hrs format) 
                    </span>
                    <span
                      class="required"
                    >
                      *
                    </span>
                  </div>
                </label>
                <div
                  class="cds--time-picker cds--time-picker--md"
                >
                  <div
                    class="cds--time-picker__input"
                  >
                    <input
                      autocomplete="off"
                      class="cds--time-picker__input-field cds--text-input"
                      id="time-selector"
                      maxlength="5"
                      pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                      placeholder="hh:mm"
                      style="width: 250px; padding: 0px 0px 0px 1rem;"
                      type="text"
                      value="00:00"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              data-testid="select"
            >
              <div
                class="cds--list-box__wrapper"
              >
                <label
                  class="cds--label"
                  dir="auto"
                  for="Provider-info"
                  id="downshift-_r_1h_-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Acknowledgement Requested From 
                    </span>
                    <span
                      class="required"
                    >
                      *
                    </span>
                  </div>
                </label>
                <div
                  class="cds--combo-box cds--list-box"
                >
                  <div
                    class="cds--list-box__field"
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-controls="downshift-_r_1h_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-_r_1h_-label"
                      autocomplete="off"
                      class="cds--text-input cds--text-input--empty"
                      id="Provider-info"
                      placeholder="Select Provider"
                      role="combobox"
                      style="width: 100%;"
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                    <button
                      aria-controls="downshift-_r_1h_-menu"
                      aria-expanded="false"
                      aria-label="Open"
                      class="cds--list-box__menu-icon"
                      id="downshift-_r_1h_-toggle-button"
                      tabindex="-1"
                      title="Open"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                      </svg>
                    </button>
                  </div>
                  <ul
                    aria-labelledby="downshift-_r_1h_-label"
                    class="cds--list-box__menu"
                    id="downshift-_r_1h_-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <div
              class="cds--form-item"
            >
              <div
                class="cds--text-area__label-wrapper"
              >
                <label
                  class="cds--label"
                  dir="auto"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Notes 
                    </span>
                    <span
                      class="required"
                    >
                      *
                    </span>
                  </div>
                </label>
              </div>
              <div
                class="cds--text-area__wrapper"
              >
                <textarea
                  aria-invalid="false"
                  class="cds--text-area"
                  placeholder="Enter a maximum of 250 characters"
                  rows="4"
                  style="width: 100%;"
                />
                <span
                  aria-atomic="true"
                  aria-live="assertive"
                  class="cds--text-area__counter-alert"
                  role="alert"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="ccs-_r_14_-tab-1"
          class="cds--tab-content"
          hidden=""
          id="ccs-_r_14_-tabpanel-1"
          role="tabpanel"
        >
          <div
            class="emergency-task-slider-content"
          >
            <div
              class="add-more-task-button-container"
            >
              <button
                class="add-non-medication-task-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--tertiary"
                type="button"
              >
                Add Task
                 +
              </button>
            </div>
            <div
              class="non-medication-task-section "
            >
              <div
                class="cds--form-item"
              >
                <div
                  class="cds--text-area__label-wrapper"
                >
                  <label
                    class="cds--label"
                    dir="auto"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Task Name 
                      </span>
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </div>
                  </label>
                </div>
                <div
                  class="cds--text-area__wrapper"
                >
                  <textarea
                    aria-invalid="false"
                    class="cds--text-area"
                    placeholder="Enter a title for the task"
                    rows="1"
                    style="width: 100%;"
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-area__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
              <div
                class="date-time-container"
              >
                <div
                  class="date-picker-carbon"
                  data-testid="datePicker"
                >
                  <div
                    class="cds--form-item"
                  >
                    <div
                      class="cds--date-picker cds--date-picker--single"
                    >
                      <div
                        class="cds--date-picker-container"
                      >
                        <label
                          class="cds--label"
                          dir="auto"
                          for="date-picker-0"
                        >
                          <div
                            class="titleText"
                          >
                            <span>
                              Scheduled Date 
                            </span>
                            <span
                              class="required"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="cds--date-picker-input__wrapper"
                        >
                          <span>
                            <input
                              autocomplete="off"
                              class="cds--date-picker__input cds--date-picker__input--md flatpickr-input"
                              id="date-picker-0"
                              pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                              placeholder="DD MMM YYYY"
                              required=""
                              style="width: 250px;"
                              type="text"
                            />
                            <svg
                              aria-hidden="true"
                              class="cds--date-picker__icon"
                              fill="currentColor"
                              focusable="false"
                              height="16"
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cds--form-item"
                >
                  <label
                    class="cds--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Schedule Time (24 hrs format) 
                      </span>
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </div>
                  </label>
                  <div
                    class="cds--time-picker cds--time-picker--md"
                  >
                    <div
                      class="cds--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="cds--time-picker__input-field cds--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 250px; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="00:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--layer-one cds--modal cds--modal-tall"
        role="presentation"
      >
        <span
          class="cds--visually-hidden"
          role="link"
          tabindex="0"
        >
          Focus sentinel
        </span>
        <div
          aria-modal="true"
          class="cds--modal-container"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="cds--modal-header"
          >
            <h2
              class="cds--modal-header__heading"
              dir="auto"
              id="cds--modal-header__heading--modal-id-_r_1n_"
            >
              Please confirm the emergency medication task
            </h2>
            <div
              class="cds--modal-close-button"
            >
              <span
                class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
              >
                <div
                  class="cds--tooltip-trigger__wrapper"
                >
                  <button
                    aria-label="Close"
                    aria-labelledby="tooltip-_r_1p_"
                    class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="cds--modal-close__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                      />
                    </svg>
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="cds--popover"
                  id="tooltip-_r_1p_"
                  role="tooltip"
                >
                  <span
                    class="cds--popover-content cds--tooltip-content"
                  >
                    Close
                  </span>
                  <span
                    class="cds--popover-caret"
                  />
                </span>
              </span>
            </div>
          </div>
          <div
            class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
            id="cds--modal-body--modal-id-_r_1n_"
          >
            <hr />
            <div
              aria-label="Structured list section"
              class="cds--structured-list administered-list-body"
              role="table"
            >
              <div
                class="cds--structured-list-tbody"
                role="rowgroup"
              />
            </div>
          </div>
          <div
            aria-busy="false"
            class="cds--modal-footer cds--btn-set"
          >
            <button
              class="cds--btn cds--btn--secondary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="cds--btn cds--btn--primary cds--btn--disabled"
              disabled=""
              type="button"
            >
              Save
            </button>
          </div>
        </div>
        <span
          class="cds--visually-hidden"
          role="link"
          tabindex="0"
        >
          Focus sentinel
        </span>
      </div>
      <div
        class="footer"
      >
        <button
          class="cancel-button-slider cds--btn cds--btn--secondary"
          data-testid="cancel"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="save-button-slider cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddEmergencyTasks should render the component with loading state 1`] = `
<div>
  <div
    class="side-bar-nav"
  >
    <div
      class="side-bar-header"
    >
      <div>
        Add Nursing Task
      </div>
      <div
        class="close-icon"
      >
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-labelledby="tooltip-_r_1_"
              class="cds--btn cds--btn--ghost cds--btn--icon-only"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-_r_1_"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="side-bar-children"
    >
      <div
        class="emergency-task-slider"
      >
        <div
          class="cds--tabs"
        >
          <button
            aria-hidden="true"
            aria-label="Scroll left"
            class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--previous cds--tab--overflow-nav-button--hidden"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 8 10 3 10.7 3.7 6.4 8 10.7 12.3 10 13z"
              />
            </svg>
          </button>
          <div
            aria-label="Nursing task type"
            class="cds--tab--list"
            role="tablist"
          >
            <button
              aria-controls="ccs-_r_4_-tabpanel-0"
              aria-selected="true"
              class="cds--tabs__nav-item cds--tabs__nav-link cds--tabs__nav-item--selected"
              id="ccs-_r_4_-tab-0"
              role="tab"
              tabindex="0"
              type="button"
            >
              <div
                class="cds--tabs__nav-item-label-wrapper"
              >
                <span
                  class="cds--tabs__nav-item-label"
                  dir="auto"
                >
                  Medication
                </span>
              </div>
            </button>
            <div
              class="cds--tabs__nav-item--close--hidden"
            >
              <button
                aria-hidden="true"
                class="cds--visually-hidden cds--tabs__nav-item--close-icon--selected"
                tabindex="-1"
                title="Remove  tab"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Press delete to remove  tab"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
            <button
              aria-controls="ccs-_r_4_-tabpanel-1"
              aria-selected="false"
              class="cds--tabs__nav-item cds--tabs__nav-link"
              id="ccs-_r_4_-tab-1"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <div
                class="cds--tabs__nav-item-label-wrapper"
              >
                <span
                  class="cds--tabs__nav-item-label"
                  dir="auto"
                >
                  Non - Medication
                </span>
              </div>
            </button>
            <div
              class="cds--tabs__nav-item--close--hidden"
            >
              <button
                aria-hidden="true"
                class="cds--visually-hidden"
                tabindex="-1"
                title="Remove  tab"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Press delete to remove  tab"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <button
            aria-hidden="true"
            aria-label="Scroll right"
            class="cds--tab--overflow-nav-button cds--tab--overflow-nav-button--next cds--tab--overflow-nav-button--hidden"
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 8 6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
              />
            </svg>
          </button>
        </div>
        <div
          aria-labelledby="ccs-_r_4_-tab-0"
          class="cds--tab-content"
          id="ccs-_r_4_-tabpanel-0"
          role="tabpanel"
        >
          <div>
            <div>
              Loading...
            </div>
          </div>
          <div
            class="emergency-task-slider-content"
          >
            <div>
              <div
                class="cds--list-box__wrapper"
              >
                <label
                  class="cds--label"
                  dir="auto"
                  for="SearchDrug"
                  id="downshift-_r_7_-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Drug Name (Emergency / Ad hoc) 
                    </span>
                    <span
                      class="required"
                    >
                      *
                    </span>
                  </div>
                </label>
                <div
                  class="cds--combo-box cds--list-box cds--list-box--xl cds--layout--size-xl"
                >
                  <div
                    class="cds--list-box__field"
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-controls="downshift-_r_7_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-_r_7_-label"
                      autocomplete="off"
                      class="cds--text-input cds--text-input--empty"
                      id="SearchDrug"
                      placeholder="Type to Search Drug"
                      role="combobox"
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                    <button
                      aria-controls="downshift-_r_7_-menu"
                      aria-expanded="false"
                      aria-label="Open"
                      class="cds--list-box__menu-icon"
                      id="downshift-_r_7_-toggle-button"
                      tabindex="-1"
                      title="Open"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                      </svg>
                    </button>
                  </div>
                  <ul
                    aria-labelledby="downshift-_r_7_-label"
                    class="cds--list-box__menu"
                    id="downshift-_r_7_-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <div
              class="inline-field"
            >
              <div
                class="dosage-section-container"
              >
                <div
                  class="NW023la29jMKwMarLfBe"
                >
                  <div
                    class="cds--form-item"
                  >
                    <div
                      class="cds--number cds--number--helpertext cds--number--md"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="Dropdown"
                      >
                        <div
                          class="titleText"
                        >
                          <span>
                            Dose 
                          </span>
                          <span
                            class="required"
                          >
                            *
                          </span>
                        </div>
                      </label>
                      <div
                        class="cds--number__input-wrapper"
                      >
                        <input
                          aria-invalid="false"
                          id="Dropdown"
                          inputmode="decimal"
                          min="0"
                          pattern="[0-9]*"
                          step="1"
                          type="number"
                          value="0"
                        />
                        <div
                          class="cds--number__controls"
                        >
                          <button
                            aria-label="Decrement number"
                            class="cds--number__control-btn down-icon"
                            tabindex="-1"
                            title="Decrement number"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="down-icon"
                              fill="currentColor"
                              focusable="false"
                              height="16"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M8 15H24V17H8z"
                              />
                            </svg>
                          </button>
                          <div
                            class="cds--number__rule-divider"
                          />
                          <button
                            aria-label="Increment number"
                            class="cds--number__control-btn up-icon"
                            tabindex="-1"
                            title="Increment number"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="up-icon"
                              fill="currentColor"
                              focusable="false"
                              height="16"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M17 15 17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                              />
                            </svg>
                          </button>
                          <div
                            class="cds--number__rule-divider"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  data-testid="select"
                >
                  <div
                    class="cds--list-box__wrapper"
                  >
                    <label
                      class="cds--label"
                      dir="auto"
                      for="Dosage Dropdown"
                      id="downshift-_r_a_-label"
                    >
                      <div
                        class="titleText"
                      >
                        <span>
                           
                        </span>
                      </div>
                    </label>
                    <div
                      class="cds--combo-box cds--list-box"
                    >
                      <div
                        class="cds--list-box__field"
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-controls="downshift-_r_a_-menu"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="downshift-_r_a_-label"
                          autocomplete="off"
                          class="cds--text-input cds--text-input--empty"
                          id="Dosage Dropdown"
                          placeholder="Select Unit"
                          role="combobox"
                          style="width: 170px;"
                          tabindex="0"
                          title=""
                          type="text"
                        />
                        <button
                          aria-controls="downshift-_r_a_-menu"
                          aria-expanded="false"
                          aria-label="Open"
                          class="cds--list-box__menu-icon"
                          id="downshift-_r_a_-toggle-button"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            viewBox="0 0 16 16"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                            />
                          </svg>
                        </button>
                      </div>
                      <ul
                        aria-labelledby="downshift-_r_a_-label"
                        class="cds--list-box__menu"
                        id="downshift-_r_a_-menu"
                        role="listbox"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                data-testid="select"
              >
                <div
                  class="cds--list-box__wrapper"
                >
                  <label
                    class="cds--label"
                    dir="auto"
                    for="Route-Dropdown"
                    id="downshift-_r_d_-label"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Route 
                      </span>
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </div>
                  </label>
                  <div
                    class="cds--combo-box cds--list-box"
                  >
                    <div
                      class="cds--list-box__field"
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-controls="downshift-_r_d_-menu"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="downshift-_r_d_-label"
                        autocomplete="off"
                        class="cds--text-input cds--text-input--empty"
                        id="Route-Dropdown"
                        placeholder="Select Route"
                        role="combobox"
                        style="width: 100%;"
                        tabindex="0"
                        title=""
                        type="text"
                      />
                      <button
                        aria-controls="downshift-_r_d_-menu"
                        aria-expanded="false"
                        aria-label="Open"
                        class="cds--list-box__menu-icon"
                        id="downshift-_r_d_-toggle-button"
                        tabindex="-1"
                        title="Open"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                          />
                        </svg>
                      </button>
                    </div>
                    <ul
                      aria-labelledby="downshift-_r_d_-label"
                      class="cds--list-box__menu"
                      id="downshift-_r_d_-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="administration-info"
              style="display: flex; gap: 10px;"
            >
              <div
                class="date-picker-carbon"
                data-testid="datePicker"
              >
                <div
                  class="cds--form-item"
                >
                  <div
                    class="cds--date-picker cds--date-picker--single"
                  >
                    <div
                      class="cds--date-picker-container"
                    >
                      <label
                        class="cds--label"
                        dir="auto"
                        for="Administration-Date"
                      >
                        <div
                          class="titleText"
                        >
                          <span>
                            Administration Date 
                          </span>
                          <span
                            class="required"
                          >
                            *
                          </span>
                        </div>
                      </label>
                      <div
                        class="cds--date-picker-input__wrapper"
                      >
                        <span>
                          <input
                            autocomplete="off"
                            class="cds--date-picker__input cds--date-picker__input--md flatpickr-input"
                            id="Administration-Date"
                            pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                            placeholder="DD MMM YYYY"
                            required=""
                            style="width: 250px;"
                            type="text"
                          />
                          <svg
                            aria-hidden="true"
                            class="cds--date-picker__icon"
                            fill="currentColor"
                            focusable="false"
                            height="16"
                            preserveAspectRatio="xMidYMid meet"
                            role="img"
                            viewBox="0 0 32 32"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="cds--form-item"
              >
                <label
                  class="cds--label"
                  for="time-selector"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Administration Time (24 hrs format) 
                    </span>
                    <span
                      class="required"
                    >
                      *
                    </span>
                  </div>
                </label>
                <div
                  class="cds--time-picker cds--time-picker--md"
                >
                  <div
                    class="cds--time-picker__input"
                  >
                    <input
                      autocomplete="off"
                      class="cds--time-picker__input-field cds--text-input"
                      id="time-selector"
                      maxlength="5"
                      pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                      placeholder="hh:mm"
                      style="width: 250px; padding: 0px 0px 0px 1rem;"
                      type="text"
                      value="00:00"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              data-testid="select"
            >
              <div
                class="cds--list-box__wrapper"
              >
                <label
                  class="cds--label"
                  dir="auto"
                  for="Provider-info"
                  id="downshift-_r_h_-label"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Acknowledgement Requested From 
                    </span>
                    <span
                      class="required"
                    >
                      *
                    </span>
                  </div>
                </label>
                <div
                  class="cds--combo-box cds--list-box"
                >
                  <div
                    class="cds--list-box__field"
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-controls="downshift-_r_h_-menu"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-labelledby="downshift-_r_h_-label"
                      autocomplete="off"
                      class="cds--text-input cds--text-input--empty"
                      id="Provider-info"
                      placeholder="Select Provider"
                      role="combobox"
                      style="width: 100%;"
                      tabindex="0"
                      title=""
                      type="text"
                      value=""
                    />
                    <button
                      aria-controls="downshift-_r_h_-menu"
                      aria-expanded="false"
                      aria-label="Open"
                      class="cds--list-box__menu-icon"
                      id="downshift-_r_h_-toggle-button"
                      tabindex="-1"
                      title="Open"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                      </svg>
                    </button>
                  </div>
                  <ul
                    aria-labelledby="downshift-_r_h_-label"
                    class="cds--list-box__menu"
                    id="downshift-_r_h_-menu"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <div
              class="cds--form-item"
            >
              <div
                class="cds--text-area__label-wrapper"
              >
                <label
                  class="cds--label"
                  dir="auto"
                >
                  <div
                    class="titleText"
                  >
                    <span>
                      Notes 
                    </span>
                    <span
                      class="required"
                    >
                      *
                    </span>
                  </div>
                </label>
              </div>
              <div
                class="cds--text-area__wrapper"
              >
                <textarea
                  aria-invalid="false"
                  class="cds--text-area"
                  placeholder="Enter a maximum of 250 characters"
                  rows="4"
                  style="width: 100%;"
                />
                <span
                  aria-atomic="true"
                  aria-live="assertive"
                  class="cds--text-area__counter-alert"
                  role="alert"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="ccs-_r_4_-tab-1"
          class="cds--tab-content"
          hidden=""
          id="ccs-_r_4_-tabpanel-1"
          role="tabpanel"
        >
          <div>
            <div>
              Loading...
            </div>
          </div>
          <div
            class="emergency-task-slider-content"
          >
            <div
              class="add-more-task-button-container"
            >
              <button
                class="add-non-medication-task-button cds--btn cds--btn--sm cds--layout--size-sm cds--btn--tertiary"
                type="button"
              >
                Add Task
                 +
              </button>
            </div>
            <div
              class="non-medication-task-section "
            >
              <div
                class="cds--form-item"
              >
                <div
                  class="cds--text-area__label-wrapper"
                >
                  <label
                    class="cds--label"
                    dir="auto"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Task Name 
                      </span>
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </div>
                  </label>
                </div>
                <div
                  class="cds--text-area__wrapper"
                >
                  <textarea
                    aria-invalid="false"
                    class="cds--text-area"
                    placeholder="Enter a title for the task"
                    rows="1"
                    style="width: 100%;"
                  />
                  <span
                    aria-atomic="true"
                    aria-live="assertive"
                    class="cds--text-area__counter-alert"
                    role="alert"
                  />
                </div>
              </div>
              <div
                class="date-time-container"
              >
                <div
                  class="date-picker-carbon"
                  data-testid="datePicker"
                >
                  <div
                    class="cds--form-item"
                  >
                    <div
                      class="cds--date-picker cds--date-picker--single"
                    >
                      <div
                        class="cds--date-picker-container"
                      >
                        <label
                          class="cds--label"
                          dir="auto"
                          for="date-picker-0"
                        >
                          <div
                            class="titleText"
                          >
                            <span>
                              Scheduled Date 
                            </span>
                            <span
                              class="required"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="cds--date-picker-input__wrapper"
                        >
                          <span>
                            <input
                              autocomplete="off"
                              class="cds--date-picker__input cds--date-picker__input--md flatpickr-input"
                              id="date-picker-0"
                              pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                              placeholder="DD MMM YYYY"
                              required=""
                              style="width: 250px;"
                              type="text"
                            />
                            <svg
                              aria-hidden="true"
                              class="cds--date-picker__icon"
                              fill="currentColor"
                              focusable="false"
                              height="16"
                              preserveAspectRatio="xMidYMid meet"
                              role="img"
                              viewBox="0 0 32 32"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="cds--form-item"
                >
                  <label
                    class="cds--label"
                    for="time-selector"
                  >
                    <div
                      class="titleText"
                    >
                      <span>
                        Schedule Time (24 hrs format) 
                      </span>
                      <span
                        class="required"
                      >
                        *
                      </span>
                    </div>
                  </label>
                  <div
                    class="cds--time-picker cds--time-picker--md"
                  >
                    <div
                      class="cds--time-picker__input"
                    >
                      <input
                        autocomplete="off"
                        class="cds--time-picker__input-field cds--text-input"
                        id="time-selector"
                        maxlength="5"
                        pattern="(1[012]|[1-9]):[0-5][0-9](\\s)?"
                        placeholder="hh:mm"
                        style="width: 250px; padding: 0px 0px 0px 1rem;"
                        type="text"
                        value="00:00"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--layer-one cds--modal cds--modal-tall"
        role="presentation"
      >
        <span
          class="cds--visually-hidden"
          role="link"
          tabindex="0"
        >
          Focus sentinel
        </span>
        <div
          aria-modal="true"
          class="cds--modal-container"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="cds--modal-header"
          >
            <h2
              class="cds--modal-header__heading"
              dir="auto"
              id="cds--modal-header__heading--modal-id-_r_n_"
            >
              Please confirm the emergency medication task
            </h2>
            <div
              class="cds--modal-close-button"
            >
              <span
                class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
              >
                <div
                  class="cds--tooltip-trigger__wrapper"
                >
                  <button
                    aria-label="Close"
                    aria-labelledby="tooltip-_r_p_"
                    class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="cds--modal-close__icon"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                      />
                    </svg>
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="cds--popover"
                  id="tooltip-_r_p_"
                  role="tooltip"
                >
                  <span
                    class="cds--popover-content cds--tooltip-content"
                  >
                    Close
                  </span>
                  <span
                    class="cds--popover-caret"
                  />
                </span>
              </span>
            </div>
          </div>
          <div
            class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
            id="cds--modal-body--modal-id-_r_n_"
          >
            <hr />
            <div
              aria-label="Structured list section"
              class="cds--structured-list administered-list-body"
              role="table"
            >
              <div
                class="cds--structured-list-tbody"
                role="rowgroup"
              />
            </div>
          </div>
          <div
            aria-busy="false"
            class="cds--modal-footer cds--btn-set"
          >
            <button
              class="cds--btn cds--btn--secondary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="cds--btn cds--btn--primary cds--btn--disabled"
              disabled=""
              type="button"
            >
              Save
            </button>
          </div>
        </div>
        <span
          class="cds--visually-hidden"
          role="link"
          tabindex="0"
        >
          Focus sentinel
        </span>
      </div>
      <div
        class="footer"
      >
        <button
          class="cancel-button-slider cds--btn cds--btn--secondary"
          data-testid="cancel"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="save-button-slider cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;
